k3s/example/nginx/ingress-service-a-b.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a-b
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: "nginx"
  rules:
    - host: srva.nginx.svc
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-a
                port:
                  number: 80
    - host: srvb.nginx.svc
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-b
                port:
                  number: 80
